# wsac

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindWDK.cmake  SetConfigIn.cmake
wsac-dll/: CMakeLists.txt  README.md
wsac-dll/src/: Config.hpp.in  DllMain.cpp  Host.cpp  Host.hpp  Include.hpp  Log.hpp
wsac-dll/src/IO/: FrameReader.hpp  FrameWriter.cpp  FrameWriter.hpp  PipeReader.cpp  PipeReader.hpp  PipeWriter.cpp  PipeWriter.hpp
wsac-dll/src/IO/frame/: FrameReader.cpp  FrameReader.hpp  FrameWriter.cpp  FrameWriter.hpp
wsac-dll/src/IO/packet/: PacketReader.cpp  PacketReader.hpp  PacketWriter.cpp  PacketWriter.hpp
wsac-dll/src/IO/pipe/: PipeReader.cpp  PipeReader.hpp  PipeWriter.cpp  PipeWriter.hpp
wsac-dll/src/Model/: Bytes.hpp  FrameHeader.cpp  FrameHeader.hpp  Vector.hpp
wsac-dll/src/Model/IO/: FrameHeader.cpp  FrameHeader.hpp  PacketHeader.cpp  PacketHeader.hpp
wsac-dll/src/Module/: AntiDebug.cpp  AntiDebug.hpp
wsac-dll/src/Net/: Comm.cpp  Comm.hpp  MessageReader.cpp  MessageReader.hpp  MessageWriter.cpp  MessageWriter.hpp
wsac-dll/src/Run/: Comm.cpp  Comm.hpp  Detector.cpp  Detector.hpp  Selector.cpp  Selector.hpp  Session.cpp  Session.hpp  SessionService.cpp  SessionService.hpp  State.cpp  State.hpp  UserLocal.cpp  UserLocal.hpp
wsac-dll/src/Run/Packet/: PacketHandler.cpp  PacketHandler.hpp
wsac-dll/src/Run/Session/: Session.cpp  Session.hpp  SessionService.cpp
wsac-dll/src/Sec/: CryptoService.cpp  CryptoService.hpp  Cryptography.cpp  Cryptography.hpp
wsac-dll/src/Utils/: Exception.hpp  concept.hpp
wsac-dll/src/Utils/Crypto/: ChaCha.cpp  ChaCha.hpp  Random.cpp  Random.hpp
wsac-krn/: CMakeLists.txt
wsac-krn/src/: Main.cpp
wsac-server/: CMakeLists.txt  app.py  config.py.in
wsac-service/: .gitignore  CMakeLists.txt  Config.cs.in  PipeCryptoExchangeResponseHeader.cs  PipeManager.cs  PipeServer.cs  PipeStreamExtension.cs  PipeWorker.cs  Program.cs  RcvPayloadManager.cs  WsACService.csproj  wsac-service.sln
wsac-service/Logging/: ILoggable.cs  LogExtension.cs
wsac-service/Net/: PipeManager.cs  PipeServer.cs  PipeStreamExtension.cs  PipeWorker.cs
wsac-service/Sec/: CryptoProvider.cs
wsac-service/WsACService.Generator/: HandlerCollectionGenerator.cs  WsACService.Generator.csproj
wsac-test/: CMakeLists.txt
wsac-test/src/: Main.cpp
(+75 files in other folders)
