cmake_minimum_required(VERSION 3.31)
project(wsac)

set(CMAKE_CXX_STANDARD 23)

set(CMAKE_SHARED_LIBRARY_PREFIX "")
set(CMAKE_IMPORT_LIBRARY_PREFIX "")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/build")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/build")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/build")

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/SetConfigIn.cmake")

if ("dll" IN_LIST WSAC_ENABLED_PROJECTS)
    set(WDK_PFX "${CMAKE_CURRENT_SOURCE_DIR}/cmake/TestSigning.pfx")

    add_subdirectory(sub/phnt)
    add_subdirectory(sub/cfproxy)
    add_subdirectory(wsac-dll)
    add_subdirectory(wsac-test)
endif ()
if ("krn" IN_LIST WSAC_ENABLED_PROJECTS)
    add_subdirectory(wsac-krn)
endif ()
if ("server" IN_LIST WSAC_ENABLED_PROJECTS)
    add_subdirectory(wsac-server)
endif ()
if ("service" IN_LIST WSAC_ENABLED_PROJECTS)
    add_subdirectory(wsac-service)
endif ()
